# ChangeLog for sys-boot/syslinux
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-boot/syslinux/ChangeLog,v 1.12 2005/01/10 00:32:49 vapier Exp $

*syslinux-2.13 (09 Jan 2005)

  09 Jan 2005; Mike Frysinger <vapier@gentoo.org> +syslinux-2.13.ebuild:
  Version bump.

*syslinux-1.76 (09 Jan 2005)

  09 Jan 2005; Mike Frysinger <vapier@gentoo.org> -syslinux-1.75.ebuild,
  +syslinux-1.76.ebuild:
  Old school version bump.

  01 Jan 2005; Mike Doty <kingtaco@gentoo.org> syslinux-2.11.ebuild:
  ~amd64 keyword added

*syslinux-2.11 (04 Dec 2004)

  04 Dec 2004; Brian Jackson <iggy@gentoo.org> +syslinux-2.11.ebuild:
  version bump; we now build differently, more inline with what hpa suggests

  11 May 2004; <solar@gentoo.org> syslinux-2.06.ebuild, syslinux-2.09.ebuild:
  add ssp check before patching in nossp patches. This prevents breakage if your
  gcc knows nothing about -fstack-protector

*syslinux-2.09 (28 Apr 2004)

  28 Apr 2004; <solar@gentoo.org> syslinux-2.06.ebuild, syslinux-2.09.ebuild,
  files/syslinux-2.06-nossp.patch, files/syslinux-2.09-nossp.patch:
  Marked syslinux-2.06 stable. Added version syslinux-2.09 ~x86. Added patches
  which force -fno-stack-protector to be used for both

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> syslinux-2.05.ebuild,
  syslinux-2.06.ebuild:
  Add inherit eutils

  31 Dec 2003; <paul@gentoo.org> metadata.xml, syslinux-2.06.ebuild:
  nasm is not available on amd64, and even if it worked (unresearched) it could
  create all kinds of funny sideeffects

*syslinux-2.06 (08 Dec 2003)

  08 Dec 2003; Seemant Kulleen <seemant@gentoo.org> metadata.xml,
  syslinux-1.75.ebuild, syslinux-2.05.ebuild, syslinux-2.06.ebuild,
  files/2.06-nasm.patch:
  moved from sys-apps to sys-boot

  16 Sep 2003; Seemant Kulleen <seemant@gentoo.org> syslinux-2.05.ebuild,
  syslinux-2.06.ebuild:
  dependency changed from app-admin/mtools to sys-fs/mtools

*syslinux-2.06 (01 Sep 2003)
