@@ -1,6 +1,11 @@
 # ChangeLog for sys-boot/syslinux
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/syslinux/ChangeLog,v 1.12 2005/01/10 00:32:49 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/syslinux/ChangeLog,v 1.13 2005/01/10 00:41:33 vapier Exp $
+
+*syslinux-3.05 (09 Jan 2005)
+
+  09 Jan 2005; Mike Frysinger <vapier@gentoo.org> +syslinux-3.05.ebuild:
+  Version bump.
 
 *syslinux-2.13 (09 Jan 2005)
 
